--- a/CSS/hero.css
+++ b/CSS/hero.css
@@ -4,11 +4,8 @@ body{
 	font-family: roboto, arial, sans-serif;
 	
 	
-	background-color: #43A6CE;
-	height: 500px;
-	background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+	background-color: #5341C3;
+	
 }
 
 header{
@@ -49,7 +46,8 @@ main{
 	padding: 0 20px;
 	line-height: 20px;
 	margin: 0 auto;
-	padding: 0 20px;
+	padding: 0 550px;
+
 
 
 }
@@ -67,6 +65,7 @@ main img:hover{
 p{
 	padding-left: 0px;
 	color: black;
+	font-family: roboto condensed; 
 }
 
 ol{
